--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <main>
         <div class="container mt-4">
             <div class="d-flex justify-content-between">
-                <h2>Catalogo Libri</h2>
-                <button class="bg-primary text-light border-0">Aggiungi Libro</button>
+                <h2 class="fw-light">Catalogo Libri</h2>
+                <button class="bg-primary text-light border-0 rounded py-2 px-3 fw-light">Aggiungi Libro</button>
             </div>
 
             <table class="table table-striped">
