Add form-check Todo

--- a/index.html
+++ b/index.html
@@ -45,99 +45,129 @@
         </nav>
 
     </header>
-    
-    
-    <main>
-        <div class="container mt-4">
-            <div class="d-flex justify-content-between">
-                <h2 class="fw-light">Catalogo Libri</h2>
-                <button class="bg-primary text-light border-0 rounded py-2 px-3 fw-light">Aggiungi Libro</button>
-            </div>
 
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Titolo</th>
-                        <th scope="col">Data prestito</th>
-                        <th scope="col">Stato</th>
-                        <th scope="col">Azioni</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td scope="row">1</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">2</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                    <tr>
-                        <td scope="row">3</td>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>@social</td>
-                    </tr>
-                </tbody>
-            </table>
+
+    <main>
+        <div class="container">
+            <div class="row row-cols-lg-8">
+                <div class="d-flex justify-content-between">
+                    <h2 class="fw-light">Catalogo Libri</h2>
+                    <button class="bg-primary text-light border-0 rounded py-2 px-3 fw-light">Aggiungi Libro</button>
+                </div>
+
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Titolo</th>
+                            <th scope="col">Data prestito</th>
+                            <th scope="col">Stato</th>
+                            <th scope="col">Azioni</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td scope="row">1</td>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">2</td>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>@social</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- ./row -->
+
+            <div class="row row-cols-lg-4">
+                <header>
+                    <h2 class="fw-light">Todo</h2>
+                </header>
+                <main>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="checkDefault">
+                        <label class="form-check-label" for="checkDefault">
+                            Chiamare segreteria
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="checkChecked">
+                        <label class="form-check-label" for="checkChecked">
+                            Mandare avvisi prestiti scaduti
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="checkChecked">
+                        <label class="form-check-label" for="checkChecked">
+                            Ordinare nuovi libri
+                        </label>
+                    </div>
+                </main>
+            </div>
+            <!-- /.row -->
         </div>
         <!-- /.container -->
 
