Add action's icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Bootstrap dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -66,76 +69,112 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td scope="row">1</td>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td scope="row">I pilastri della terra</td>
+                            <td>-</td>
+                            <td>Disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">2</td>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
+                            <td scope="row">I promessi sposi</td>
+                            <td>-</td>
+                            <td>Disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">Il signore degli anelli</td>
+                            <td>18/10/2023</td>
+                            <td>In prestito</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">Harry Potter e la pietra filosofale</td>
+                            <td>-</td>
+                            <td>Disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">Il codice Da Vinci</td>
+                            <td>-</td>
+                            <td>Non disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">Shining</td>
+                            <td>-</td>
+                            <td>Disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">La divina commedia</td>
+                            <td>21/09/2023</td>
+                            <td>In prestito</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">Il trono di spade</td>
+                            <td>-</td>
+                            <td>Disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">Il mondo di Sofia</td>
+                            <td>-</td>
+                            <td>Non disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                            <td>25/07/2023</td>
+                            <td>In prestito</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">Il piccolo principe</td>
+                            <td>-</td>
+                            <td>Disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
+                            <td scope="row">La storia infinita</td>
+                            <td>-</td>
+                            <td>Disponibile</td>
+                            <td>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -177,7 +216,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                     Come aggiungere un nuovo libro?
                                 </button>
                             </h2>
