--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <td scope="row">I pilastri della terra</td>
                             <td>-</td>
                             <td>Disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -81,7 +81,7 @@
                             <td scope="row">I promessi sposi</td>
                             <td>-</td>
                             <td>Disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -90,7 +90,7 @@
                             <td scope="row">Il signore degli anelli</td>
                             <td>18/10/2023</td>
                             <td>In prestito</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -99,7 +99,7 @@
                             <td scope="row">Harry Potter e la pietra filosofale</td>
                             <td>-</td>
                             <td>Disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -108,7 +108,7 @@
                             <td scope="row">Il codice Da Vinci</td>
                             <td>-</td>
                             <td>Non disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -117,7 +117,7 @@
                             <td scope="row">Shining</td>
                             <td>-</td>
                             <td>Disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -126,7 +126,7 @@
                             <td scope="row">La divina commedia</td>
                             <td>21/09/2023</td>
                             <td>In prestito</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -135,7 +135,7 @@
                             <td scope="row">Il trono di spade</td>
                             <td>-</td>
                             <td>Disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -144,7 +144,7 @@
                             <td scope="row">Il mondo di Sofia</td>
                             <td>-</td>
                             <td>Non disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -153,7 +153,7 @@
                             <td scope="row">Le cronache di Narnia: il leone, la strega e l'armadio</td>
                             <td>25/07/2023</td>
                             <td>In prestito</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -162,7 +162,7 @@
                             <td scope="row">Il piccolo principe</td>
                             <td>-</td>
                             <td>Disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
@@ -171,7 +171,7 @@
                             <td scope="row">La storia infinita</td>
                             <td>-</td>
                             <td>Disponibile</td>
-                            <td>
+                            <td class="d-flex gap-1">
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-pencil-fill"></i></button>
                                 <button class="rounded text-secondary border-1 border-secondary"><i class="bi bi-trash3-fill"></i></button>
                             </td>
