Add stato's borders and bg

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                             <tr>
                                 <td scope="row">I pilastri della terra</td>
                                 <td>-</td>
-                                <td>Disponibile</td>
+                                <td>
+                                    <div class="border rounded px-1 bg-success text-light">Disponibile</div>
+                                </td>
                                 <td class="d-flex gap-1">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -83,7 +85,9 @@
                             <tr>
                                 <td scope="row">I promessi sposi</td>
                                 <td>-</td>
-                                <td>Disponibile</td>
+                                <td>
+                                    <div class="border rounded px-1 bg-success text-light">Disponibile</div>
+                                </td>
                                 <td class="d-flex gap-1">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -94,7 +98,9 @@
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
                                 <td>18/10/2023</td>
-                                <td>In prestito</td>
+                                <td>
+                                    <div class="border rounded px-1 bg-warning text-light">In prestito</div>
+                                </td>
                                 <td class="d-flex gap-1">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -105,8 +111,10 @@
                             <tr>
                                 <td scope="row">Harry Potter e la pietra filosofale</td>
                                 <td>-</td>
-                                <td>Disponibile</td>
-                                <td class="d-flex gap-1">
+                                <td>
+                                    <div class="border rounded px-1 bg-success text-light">Disponibile</div>
+                                </td>
+                                <td class="d-flex gap-1 py-sm-4">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
                                     <button class="rounded text-secondary border-1 border-secondary"><i
@@ -116,8 +124,10 @@
                             <tr>
                                 <td scope="row">Il codice Da Vinci</td>
                                 <td>-</td>
-                                <td>Non disponibile</td>
-                                <td class="d-flex gap-1">
+                                <td>
+                                    <div class="border rounded px-1 bg-danger text-light">Non disponibile</div>
+                                </td>
+                                <td class="d-flex gap-1 py-sm-4">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
                                     <button class="rounded text-secondary border-1 border-secondary"><i
@@ -127,7 +137,9 @@
                             <tr>
                                 <td scope="row">Shining</td>
                                 <td>-</td>
-                                <td>Disponibile</td>
+                                <td>
+                                    <div class="border rounded px-1 bg-success text-light">Disponibile</div>
+                                </td>
                                 <td class="d-flex gap-1">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -138,7 +150,9 @@
                             <tr>
                                 <td scope="row">La divina commedia</td>
                                 <td>21/09/2023</td>
-                                <td>In prestito</td>
+                                <td>
+                                    <div class="border rounded px-1 bg-warning text-light">In prestito</div>
+                                </td>
                                 <td class="d-flex gap-1">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -149,7 +163,9 @@
                             <tr>
                                 <td scope="row">Il trono di spade</td>
                                 <td>-</td>
-                                <td>Disponibile</td>
+                                <td>
+                                    <div class="border rounded px-1 bg-success text-light">Disponibile</div>
+                                </td>
                                 <td class="d-flex gap-1">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -160,8 +176,10 @@
                             <tr>
                                 <td scope="row">Il mondo di Sofia</td>
                                 <td>-</td>
-                                <td>Non disponibile</td>
-                                <td class="d-flex gap-1">
+                                <td>
+                                    <div class="border rounded px-1 bg-danger text-light">Non disponibile</div>
+                                </td>
+                                <td class="d-flex gap-1 py-sm-4">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
                                     <button class="rounded text-secondary border-1 border-secondary"><i
@@ -171,8 +189,10 @@
                             <tr>
                                 <td scope="row">Le cronache di Narnia: il leone, la strega e l'armadio</td>
                                 <td>25/07/2023</td>
-                                <td>In prestito</td>
-                                <td class="d-flex gap-1">
+                               <td>
+                                    <div class="border rounded px-1 bg-warning text-light">In prestito</div>
+                                </td>
+                                <td class="d-flex gap-1 py-sm-4">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
                                     <button class="rounded text-secondary border-1 border-secondary"><i
@@ -182,7 +202,9 @@
                             <tr>
                                 <td scope="row">Il piccolo principe</td>
                                 <td>-</td>
-                                <td>Disponibile</td>
+                                <td>
+                                    <div class="border rounded px-1 bg-success text-light">Disponibile</div>
+                                </td>
                                 <td class="d-flex gap-1">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -193,7 +215,9 @@
                             <tr>
                                 <td scope="row">La storia infinita</td>
                                 <td>-</td>
-                                <td>Disponibile</td>
+                                <td>
+                                    <div class="border rounded px-1 bg-success text-light">Disponibile</div>
+                                </td>
                                 <td class="d-flex gap-1">
                                     <button class="rounded text-secondary border-1 border-secondary"><i
                                             class="bi bi-pencil-fill"></i></button>
