--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <header class="mb-4">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"></a>
                 <img src="./img/duck.png" alt="Bootstrap" width="40" height="40">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -56,7 +55,7 @@
                 <div class="col-lg-8">
                     <div class="d-flex justify-content-between">
                         <h2 class="fw-light">Catalogo Libri</h2>
-                        <button class="bg-primary text-light border-0 rounded py-2 px-3 fw-light">Aggiungi Libro</button>
+                        <a href="./new-book.html" class="bg-primary text-light border-0 rounded py-2 px-3 fw-light">Aggiungi Libro</a>
                     </div>
 
                     <table class="table table-striped">
